--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 # we will not include saxonstuff as it most of it has to be built from source
 python/saxonstuff/*
 
+# ignore any .exes created
+*.exe
+
 
 ################################
 
