--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # mac junk
 .DS_Store
+._.DS_Store
 
 # ignore .vscode project setting
 .vscode/
@@ -12,6 +13,7 @@ python/pythonsaxon/*
 
 # dont need the intermidiate stuff so much
 intermidiate-from-python.xml
+output-from-python.html 
 
 # changed pyinstaller build folder
 python/pyinBuild/
