--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,14 @@
 .DS_Store
 ._.DS_Store
 
+# ignore junk folder
+junk/
+
 # we don't need PDFs i font think
 *.pdf
 
 # ignore .vscode project setting
 .vscode/
-
-# we will not include saxonstuff as it most of it has to be built from source
-python/saxonstuff/*
-python/pythonsaxon/*
-
-# dont need the intermidiate stuff so much
-intermidiate-from-python.xml
-output-from-python.html
 
 # changed pyinstaller build folder
 python/pyinBuild/
