--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ build-backend = "setuptools.build_meta"
 an_report = "supcheck.added_names_report:main"
 compare_report = "supcheck.compare_amendment_documents:main"
 startgui = "supcheck.supcheck_gui:main"
+compare_bills = "supcheck.compare_bill_documents:main"
 
 [tool.isort]
 profile = "black"
