Add columns and hyperlinks to bills compare report
Also display the old clause number first and the new number in
brackets.
Use types-lxml instead to lxml-stubs
Update HTML template to make way for the hyperlinks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
 requires-python = ">=3.10"
 
 [project.optional-dependencies]
-dev = ["pytest", "pyinstaller", "lxml-stubs"]
+dev = ["pytest", "pyinstaller", "types-lxml"]
 
 [build-system]
 requires = ["setuptools"]
