Change AN dashboard URL to a secret

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ BuildJunk/
 # ignore any .exes created
 *.exe
 
+# ignore additional example files
+not_committed_examples/
+
 
 ################################
 
