--- a/package.json
+++ b/package.json
@@ -8,21 +8,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "react": "19.0.0-rc-b8ae38f8-20241018",
-    "react-dom": "19.0.0-rc-b8ae38f8-20241018"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.11.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^9.11.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.12",
-    "parcel-bundler": "^1.12.5",
-    "run-script-os": "^1.1.6",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
-  }
+  "license": "ISC"
 }
