--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "cSpell.words": [
         "FRBR",
         "guids",
-        "Rdate"
+        "Rdate",
+        "Vite"
     ],
     "[typescriptreact]": {
         "editor.tabSize": 2,
