--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "lawchecker",
   "private": true,
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "Automated checks/compares for UK Parliament legislative papers.",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently --kill-others --names vite,python \"vite --config vite.config.ts\"  \"sleep 0.2 & python src/lawchecker/main.py\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -28,6 +28,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.10",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "concurrently": ">8.2.2"
   }
 }
