--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "lawchecker",
   "private": true,
-  "version": "3.0.0",
   "description": "Automated checks/compares for UK Parliament legislative papers.",
   "type": "module",
   "scripts": {
@@ -12,8 +11,8 @@
   },
 
   "dependencies": {
-    "react": "19.0.0-rc-b8ae38f8-20241018",
-    "react-dom": "19.0.0-rc-b8ae38f8-20241018"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
