--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "2.0.0"
 license = { file = "LICENCE" }
 dependencies = [
     "lxml",
+    "requests",
+    "pywebview",
     "click",
     "python-dateutil",
     "python-dotenv",
