Change the way custom javascript is loaded
I think I heard PDS mension that they would prefer not to have
local servers running. So for the frozen/bundled app we should
not have a local server running. This means that we must load assets
using relative paths only. I have also chosen to include the custom
javascript in the react bundle. This meant having to manually expose
functions.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ build-backend = "setuptools.build_meta"
 [project.scripts]
 an_report = "lawchecker.added_names_report:main"
 compare_report = "lawchecker.compare_amendment_documents:main"
-startgui = "lawchecker.gui:main"  # update this
+startgui = "lawchecker.main:main"
 compare_bills = "lawchecker.compare_bill_documents:main"
 bill_numbering = "lawchecker.compare_bill_numbering:cli"
 
