--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -20,6 +19,8 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "bootstrap": "^5.3.3",
+    "concurrently": ">8.2.2",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
@@ -27,7 +28,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.11",
-    "vite-plugin-svgr": "^4.2.0",
-    "concurrently": ">8.2.2"
+    "vite-plugin-singlefile": "^2.1.0",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
