--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,17 @@ dependencies = [
     "lxml",
     "requests",
     "pywebview",
-    "click",
-    "python-dateutil",
     "python-dotenv",
 ]
 requires-python = ">=3.11"
 
 [project.optional-dependencies]
-dev = ["pytest", "pyinstaller", "types-lxml"]
+dev = [
+    "pytest",
+    "types-lxml",
+    "pyinstaller;sys_platform!='darwin'",
+    "py2app;sys_platform=='darwin'",
+]
 
 [build-system]
 requires = ["setuptools"]
