--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "lawchecker"
-version = "2.0.0"
 license = { file = "LICENCE" }
 dependencies = [
     "lxml",
@@ -9,6 +8,8 @@ dependencies = [
     "python-dotenv",
 ]
 requires-python = ">=3.11"
+
+dynamic = ["version"]
 
 [project.optional-dependencies]
 dev = [
@@ -32,3 +33,6 @@ bill_numbering = "lawchecker.compare_bill_numbering:cli"
 
 [tool.isort]
 profile = "black"
+
+[tool.setuptools.dynamic]
+version = {file = "VERSION"}
