Add keywords to package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "keywords": [
+    "pywebview",
+    "react",
+    "python",
+    "javascript"
+  ],
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
