gitignore junk files and folders

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,9 @@ dist-ssr
 package-lock.json
 
 _Reports/2023-06-28__18-15
-# ignore junk folder
+# ignore junk folders and files
 junk/
+junk*.*
 
 # we don't need PDFs i don't think
 *.pdf
