--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,4 +16,7 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "prettier.enable": true,
+    "files.associations": {
+        "*.spec": "python"
+    },
 }
