--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,9 @@ quote-style = "single"
 [tool.setuptools.dynamic]
 version = {attr = "lawchecker.__version__"}
 
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [tool.setuptools.package-data]
 lawchecker = [
     "templates/*.html",
