Updates pywebview dependency and adds error handling
Removes the version pinning for pywebview to allow for newer versions.

Adds try-except blocks around webview creation and start to
gracefully handle exceptions and log errors. This prevents the
application from crashing when encountering issues during webview
initialization.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ dependencies = [
     "lxml",
     "requests",
     "python-dotenv",
-    "pywebview<6.0",
+    "pywebview",
 ]
 requires-python = ">=3.11"
 keywords = [
