Add json summary to web_amendments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,13 @@ dependencies = [
     "lxml",
     "requests",
     "python-dotenv",
-    "pywebview",
+    "pywebview[ssl]; sys_platform != 'darwin'",
+    "pywebview<6; sys_platform == 'darwin'",
+    "pyobjc-core<11; sys_platform == 'darwin'",
+    "pyobjc-framework-cocoa<11; sys_platform == 'darwin'",
+    "pyobjc-framework-quartz<11; sys_platform == 'darwin'",
+    "pyobjc-framework-security<11; sys_platform == 'darwin'",
+    "pyobjc-framework-webkit<11; sys_platform == 'darwin'",
 ]
 requires-python = ">=3.11"
 keywords = [
