Remove unnecessary save of amendment json

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,8 @@ dependencies = [
     "lxml",
     "requests",
     "python-dotenv",
-    "pywebview[ssl]; sys_platform != 'darwin'",
-    "pywebview<6; sys_platform == 'darwin'",
-    "pyobjc-core<11; sys_platform == 'darwin'",
-    "pyobjc-framework-cocoa<11; sys_platform == 'darwin'",
-    "pyobjc-framework-quartz<11; sys_platform == 'darwin'",
-    "pyobjc-framework-security<11; sys_platform == 'darwin'",
-    "pyobjc-framework-webkit<11; sys_platform == 'darwin'",
+    "pywebview[ssl]",
+    "charset-normalizer"
 ]
 requires-python = ">=3.11"
 keywords = [
