Migrate from requests to httpx with async support and refactor logging
Major changes:
- Replace requests/urllib3 with httpx for HTTP client (async-ready)
- Add new bills_api.py module with async BillsApiClient and typed dataclasses
- Refactor check_web_amdts to use async API calls with progress bar
- Convert logging setup to lazy initialization via setup_lawchecker_logging()
- Fix os.getlogin() crash using getpass.getuser() fallback
- Add stacklevel to custom logger.notice() for correct source location

check_web_amdts improvements:
- Add async_progress_bar for concurrent API fetching
- Improve AmdtRef to handle empty num/dnum edge cases
- Better text normalization with clean_lm_xml_amdt and clean_json_html_amdt
- Enhanced whitespace handling for amendment text comparison

Other fixes:
- Add CSS for sticky diff table headers and h5 margin in reports
- Replace double quote formatting in HTML post-processing
- Call setup_lawchecker_logging() in CLI entry points
- Minor code formatting (single quotes, line wrapping)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "lawchecker"
 license = "MIT"
 dependencies = [
     "lxml",
-    "requests",
+    "httpx",
     "python-dotenv",
     "pywebview[ssl]",
     "charset-normalizer"
